syntax = "proto3";
package logwriter;
option go_package = "github.com/ahakra/servicediscovery/loggerService/writer/internal/proto";


import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service Logwriter {
    rpc SaveLog(LogPayload) returns (google.protobuf.Empty) {};
}

message LogPayload {
    CollectionName collectionName =1;
    LogData logData =2;
}

message CollectionName {
    string name =1;
}


message LogData{
    LogType logType =1;
    map<string,  string>  data = 2;
    google.protobuf.Timestamp createdAt = 3;
}

enum LogType {
    LOG_TYPE_VERBOSE = 0;
    LOG_TYPE_INFORMATION = 1;
    LOG_TYPE_WARNING = 2;
    LOG_TYPE_ERROR = 3;

}

